DIAM-113 add comment form to ticket view

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.less
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.less
@@ -74,7 +74,8 @@
     margin: 0 0 1em;
 }
 
-.diam-comment {
+.diam-comment,
+.diam-comment-form {
     padding: 1em;
     margin: .5em 0;
     padding-left: 6.5em;
