--- a/src/Diamante/FrontBundle/Resources/public/js/modules/Footer/templates/footer.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/Footer/templates/footer.ejs
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-xs-6 copyright small">
     Diamante is released under <a href="http://opensource.org/licenses/osl-3.0.php">OSL 3.0</a> License
-    by <a href="http://eltrino.com">Eltrino LLC</a>
+    by <a href="http://eltrino.com" target="_blank">Eltrino LLC</a>
   </div>
   <div class="col-xs-6 text-right text-muted small">
 
