[DIAM-1830] Add padding for diam-pie-chart-widget

--- a/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
+++ b/src/Diamante/DeskBundle/Resources/public/css/diam.widget.css
@@ -142,6 +142,10 @@
   text-transform: capitalize;
 }
 
+.diam-plot.diam-pie-chart-widget {
+    padding: 10px;
+}
+
 .dashboard-widgets-wrapper .dashboard-widget-container .dashboard-widget-small-column:nth-child(2) {
   width: 50px;
 }
