DIAM-113 Fix tiny-mce bug

--- a/src/Diamante/DeskBundle/Resources/views/Comment/form.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Comment/form.html.twig
@@ -15,7 +15,8 @@
 
 {% set options  = {
     formName : form.vars.full_name,
-    privateInputId : form.private.vars.id
+    privateInputId : form.private.vars.id,
+    contentInputId : form.content.vars.id
 } %}
 
 <div class="diam-comment-form"
